Adding images and actions to trigger image change.

--- a/HungryGuys/HungryGuys/HungryGuys.csproj
+++ b/HungryGuys/HungryGuys/HungryGuys.csproj
@@ -84,6 +84,9 @@
   <ItemGroup>
     <Content Include="Resources\ding.wav" />
     <Content Include="Resources\eating.wav" />
+    <Content Include="Resources\plate-crumbs.png" />
+    <Content Include="Resources\plate-init.png" />
+    <Content Include="Resources\plate-sandwich.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
